--- a/src/Views/login.fxml
+++ b/src/Views/login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Login">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Login">
    <children>
       <TextField fx:id="usernameField" layoutX="526.0" layoutY="285.0" />
       <TextField fx:id="passwordField" layoutX="526.0" layoutY="357.0" />
