--- a/src/Views/login.fxml
+++ b/src/Views/login.fxml
@@ -2,17 +2,17 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Login">
    <children>
       <TextField fx:id="usernameField" layoutX="526.0" layoutY="285.0" />
-      <TextField fx:id="passwordField" layoutX="526.0" layoutY="357.0" />
       <Button fx:id="loginButton" layoutX="574.0" layoutY="421.0" mnemonicParsing="false" text="Log In" />
       <Label layoutX="461.0" layoutY="289.0" text="Username" />
       <Label layoutX="461.0" layoutY="361.0" text="Password" />
-      <Button fx:id="exitButton" layoutX="582.0" layoutY="484.0" mnemonicParsing="false" text="Exit" />
+      <Button fx:id="exitButton" layoutX="582.0" layoutY="484.0" mnemonicParsing="false" onAction="#exitProgramButton" text="Exit" />
+      <PasswordField fx:id="passwordField" layoutX="525.0" layoutY="357.0" />
    </children>
 </AnchorPane>
