--- a/src/Views/mainScreen.fxml
+++ b/src/Views/mainScreen.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.MainScreen">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="appointmentTable" layoutX="63.0" layoutY="66.0" prefHeight="404.0" prefWidth="1074.0">
         <columns>
