--- a/src/Views/mainScreen.fxml
+++ b/src/Views/mainScreen.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -21,5 +21,10 @@
             <TableColumn fx:id="appointmentUserIDColumn" prefWidth="93.0" text="User_ID" />
         </columns>
       </TableView>
+      <Button fx:id="addAppointmentButton" layoutX="63.0" layoutY="573.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Add Appointment" />
+      <Button fx:id="modifyAppointmentButton" layoutX="63.0" layoutY="627.0" mnemonicParsing="false" text="Modify Appointment" />
+      <Button fx:id="addCustomerButton" layoutX="230.0" layoutY="573.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Add Customer" />
+      <Button fx:id="modifyCustomer" layoutX="229.0" layoutY="627.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Modify Customer" />
+      <Button fx:id="exitButton" layoutX="1010.0" layoutY="749.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Exit" />
    </children>
 </AnchorPane>
