--- a/src/Views/addCustomer.fxml
+++ b/src/Views/addCustomer.fxml
@@ -3,27 +3,38 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.AddCustomer">
    <children>
-      <TextField fx:id="customerIDBox" disable="true" layoutX="273.0" layoutY="105.0" />
-      <Label fx:id="customerIDLabel" layoutX="84.0" layoutY="109.0" text="Customer ID" />
-      <Label fx:id="customerNameLabel" layoutX="74.0" layoutY="165.0" text="Customer Name" />
-      <Label fx:id="customerAddressLabel" layoutX="74.0" layoutY="344.0" text="Street Address" />
-      <Label fx:id="phoneLabel" layoutX="74.0" layoutY="268.0" text="Phone Number" />
-      <Label fx:id="divisionOneLabel" layoutX="74.0" layoutY="411.0" text="Country" />
-      <Label fx:id="divisionTwoLabel" layoutX="329.0" layoutY="411.0" text="State" />
-      <ComboBox fx:id="divisionOneBox" layoutX="138.0" layoutY="407.0" prefWidth="150.0" />
-      <ComboBox fx:id="divisionTwoBox" layoutX="386.0" layoutY="407.0" prefWidth="150.0" />
-      <TextField fx:id="customerNameBox" layoutX="273.0" layoutY="161.0" />
-      <TextField fx:id="customerAddressBox" layoutX="199.0" layoutY="340.0" />
-      <TextField fx:id="customerPhoneBox" layoutX="199.0" layoutY="264.0" />
-      <Button fx:id="createCustomerButton" layoutX="317.0" layoutY="544.0" mnemonicParsing="false" text="Create Customer" />
-      <TextField fx:id="postCodeBox" layoutX="161.0" layoutY="472.0" />
-      <Label fx:id="postCodeLabel" layoutX="74.0" layoutY="476.0" text="Postal Code" />
-      <Button fx:id="cancelButton" layoutX="317.0" layoutY="611.0" mnemonicParsing="false" text="Cancel" />
+      <TextField fx:id="customerIDBox" disable="true" layoutX="151.0" layoutY="555.0" />
+      <Label fx:id="customerIDLabel" layoutX="36.0" layoutY="559.0" text="Customer ID" />
+      <Label fx:id="customerNameLabel" layoutX="36.0" layoutY="603.0" text="Customer Name" />
+      <Label fx:id="customerAddressLabel" layoutX="36.0" layoutY="676.0" text="Street Address" />
+      <Label fx:id="phoneLabel" layoutX="24.0" layoutY="640.0" text="Phone Number" />
+      <Label fx:id="divisionOneLabel" layoutX="369.0" layoutY="718.0" text="Country" />
+      <Label fx:id="divisionTwoLabel" layoutX="624.0" layoutY="718.0" text="State" />
+      <ComboBox fx:id="divisionOneBox" layoutX="433.0" layoutY="714.0" prefWidth="150.0" />
+      <ComboBox fx:id="divisionTwoBox" layoutX="681.0" layoutY="714.0" prefWidth="150.0" />
+      <TextField fx:id="customerNameBox" layoutX="151.0" layoutY="599.0" />
+      <TextField fx:id="customerAddressBox" layoutX="161.0" layoutY="672.0" />
+      <TextField fx:id="customerPhoneBox" layoutX="149.0" layoutY="636.0" />
+      <Button fx:id="createCustomerButton" layoutX="1064.0" layoutY="672.0" mnemonicParsing="false" text="Create Customer" />
+      <TextField fx:id="postCodeBox" layoutX="130.0" layoutY="714.0" />
+      <Label fx:id="postCodeLabel" layoutX="43.0" layoutY="718.0" text="Postal Code" />
+      <Button fx:id="cancelButton" layoutX="1064.0" layoutY="739.0" mnemonicParsing="false" text="Cancel" />
+      <TableView layoutX="75.0" layoutY="69.0" prefHeight="445.0" prefWidth="1063.0">
+        <columns>
+          <TableColumn fx:id="customerIDColumn" prefWidth="75.0" text="Customer ID" />
+          <TableColumn fx:id="customerNameColumn" prefWidth="139.0" text="Name" />
+            <TableColumn fx:id="customerAddressColumn" prefWidth="75.0" text="Address" />
+            <TableColumn fx:id="customerPostCodeColumn" prefWidth="75.0" text="Postal Code" />
+            <TableColumn fx:id="customerPhoneColumn" prefWidth="75.0" text="Phone Number" />
+        </columns>
+      </TableView>
+      <Button layoutX="1064.0" layoutY="706.0" mnemonicParsing="false" onAction="#updateCustomerButton" text="Update Cusotmer" />
    </children>
 </AnchorPane>
