--- a/src/Views/customerScreen.fxml
+++ b/src/Views/customerScreen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.AddCustomer">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <TextField fx:id="customerIDBox" disable="true" layoutX="151.0" layoutY="555.0" />
       <Label fx:id="customerIDLabel" layoutX="36.0" layoutY="559.0" text="Customer ID" />
@@ -26,7 +26,7 @@
       <TextField fx:id="postCodeBox" layoutX="130.0" layoutY="714.0" />
       <Label fx:id="postCodeLabel" layoutX="43.0" layoutY="718.0" text="Postal Code" />
       <Button fx:id="cancelButton" layoutX="1064.0" layoutY="739.0" mnemonicParsing="false" text="Cancel" />
-      <TableView layoutX="75.0" layoutY="69.0" prefHeight="445.0" prefWidth="1063.0">
+      <TableView fx:id="customersTable" layoutX="75.0" layoutY="69.0" prefHeight="445.0" prefWidth="1063.0">
         <columns>
           <TableColumn fx:id="customerIDColumn" prefWidth="75.0" text="Customer ID" />
           <TableColumn fx:id="customerNameColumn" prefWidth="139.0" text="Name" />
@@ -35,6 +35,6 @@
             <TableColumn fx:id="customerPhoneColumn" prefWidth="75.0" text="Phone Number" />
         </columns>
       </TableView>
-      <Button layoutX="1064.0" layoutY="706.0" mnemonicParsing="false" onAction="#updateCustomerButton" text="Update Cusotmer" />
+      <Button layoutX="1064.0" layoutY="706.0" mnemonicParsing="false" text="Update Cusotmer" />
    </children>
 </AnchorPane>
