--- a/src/Views/mainScreen.fxml
+++ b/src/Views/mainScreen.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
@@ -21,9 +25,30 @@
             <TableColumn fx:id="appointmentUserIDColumn" prefWidth="93.0" text="User_ID" />
         </columns>
       </TableView>
-      <Button fx:id="addAppointmentButton" layoutX="63.0" layoutY="573.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Add Appointment" />
-      <Button fx:id="modifyAppointmentButton" layoutX="63.0" layoutY="627.0" mnemonicParsing="false" text="Modify Appointment" />
-      <Button fx:id="customerScreenButton" layoutX="230.0" layoutY="573.0" mnemonicParsing="false" onAction="#customerScreen" prefHeight="25.0" prefWidth="127.0" text="Customers" />
+      <Button fx:id="addAppointmentButton" layoutX="580.0" layoutY="749.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Add Appointment" />
+      <Button fx:id="modifyAppointmentButton" layoutX="722.0" layoutY="749.0" mnemonicParsing="false" text="Modify Appointment" />
+      <Button fx:id="customerScreenButton" layoutX="1010.0" layoutY="693.0" mnemonicParsing="false" onAction="#customerScreen" prefHeight="25.0" prefWidth="127.0" text="Customers" />
       <Button fx:id="exitButton" layoutX="1010.0" layoutY="749.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="127.0" text="Exit" />
+      <Button fx:id="clearButton" layoutX="867.0" layoutY="749.0" mnemonicParsing="false" onAction="#clearButton" prefHeight="25.0" prefWidth="127.0" text="Clear" />
+      <TextField fx:id="appointmentIDBox" editable="false" layoutX="178.0" layoutY="489.0" />
+      <Label layoutX="63.0" layoutY="493.0" text="Appointment ID" />
+      <Label layoutX="63.0" layoutY="529.0" text="Title" />
+      <TextField fx:id="appointmentTitleBox" layoutX="178.0" layoutY="525.0" />
+      <Label layoutX="63.0" layoutY="568.0" text="Description" />
+      <TextField fx:id="appointmentDescriptionBox" layoutX="178.0" layoutY="564.0" />
+      <TextField fx:id="appointmentLocationBox" layoutX="178.0" layoutY="602.0" />
+      <Label layoutX="63.0" layoutY="606.0" text="Location" />
+      <DatePicker layoutX="179.0" layoutY="645.0" />
+      <Label layoutX="64.0" layoutY="649.0" text="Start" />
+      <Spinner layoutX="443.0" layoutY="645.0" prefHeight="25.0" prefWidth="71.0" />
+      <Label layoutX="396.0" layoutY="649.0" text="Hour" />
+      <Spinner layoutX="601.0" layoutY="645.0" prefHeight="25.0" prefWidth="71.0" />
+      <Label layoutX="554.0" layoutY="649.0" text="Minute" />
+      <DatePicker layoutX="179.0" layoutY="681.0" />
+      <Label layoutX="64.0" layoutY="685.0" text="End" />
+      <Spinner layoutX="443.0" layoutY="681.0" prefHeight="25.0" prefWidth="71.0" />
+      <Label layoutX="396.0" layoutY="685.0" text="Hour" />
+      <Spinner layoutX="601.0" layoutY="681.0" prefHeight="25.0" prefWidth="71.0" />
+      <Label layoutX="554.0" layoutY="685.0" text="Minute" />
    </children>
 </AnchorPane>
