--- a/src/Views/mainScreen.fxml
+++ b/src/Views/mainScreen.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -40,15 +40,15 @@
       <Label layoutX="63.0" layoutY="606.0" text="Location" />
       <DatePicker fx:id="appointmentStartDateBox" layoutX="179.0" layoutY="645.0" />
       <Label layoutX="64.0" layoutY="649.0" text="Start" />
-      <Spinner fx:id="appointmentStartHourBox" layoutX="443.0" layoutY="645.0" prefHeight="25.0" prefWidth="71.0" />
       <Label layoutX="396.0" layoutY="649.0" text="Hour" />
-      <Spinner fx:id="appointmentStartMinuteBox" layoutX="601.0" layoutY="645.0" prefHeight="25.0" prefWidth="71.0" />
       <Label layoutX="554.0" layoutY="649.0" text="Minute" />
       <DatePicker fx:id="appointmentEndDateBox" layoutX="179.0" layoutY="681.0" />
       <Label layoutX="64.0" layoutY="685.0" text="End" />
-      <Spinner fx:id="appointmentEndHourBox" layoutX="443.0" layoutY="681.0" prefHeight="25.0" prefWidth="71.0" />
       <Label layoutX="396.0" layoutY="685.0" text="Hour" />
-      <Spinner fx:id="appointmentEndMinuteBox" layoutX="601.0" layoutY="681.0" prefHeight="25.0" prefWidth="71.0" />
       <Label layoutX="554.0" layoutY="685.0" text="Minute" />
+      <ComboBox fx:id="startHourBox" layoutX="449.0" layoutY="645.0" prefHeight="25.0" prefWidth="78.0" />
+      <ComboBox fx:id="endHourBox" layoutX="449.0" layoutY="681.0" prefHeight="25.0" prefWidth="78.0" />
+      <ComboBox fx:id="startMinuteBox" layoutX="605.0" layoutY="645.0" prefHeight="25.0" prefWidth="78.0" />
+      <ComboBox fx:id="endMinuteBox" layoutX="605.0" layoutY="681.0" prefHeight="25.0" prefWidth="78.0" />
    </children>
 </AnchorPane>
