--- a/src/Views/reportScreen.fxml
+++ b/src/Views/reportScreen.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="reportScreen" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextArea fx:id="reportTextArea" layoutX="36.0" layoutY="30.0" prefHeight="704.0" prefWidth="1126.0" />
-      <Button fx:id="exitButton" onAction="exitButton" layoutX="573.0" layoutY="750.0" mnemonicParsing="false" text="Back" />
-   </children>
+      <TextArea fx:id="reportText" layoutX="36.0" layoutY="30.0" prefHeight="704.0" prefWidth="1126.0" />
+      <Button fx:id="exitButton" layoutX="1115.0" layoutY="750.0" mnemonicParsing="false" onAction="#backOut" text="Back" />
+       </children>
 </AnchorPane>
